# visualize-fully-connected-layer-weight

./: .gitignore  Dockerfile_gpu  Makefile  README.md  fashion_mnist_example.ipynb  fashion_mnist_example_arcface.ipynb  pyproject.toml
models/: cnn.py  metrics.py
src/: keras_callback.py  keras_utils.py  utils.py
