[tool.poetry]
name = "visualize-fully-connected-layer-weight"
version = "0.1.0"
description = "Keras implementation to visualize weights of fully connected layer"
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
tensorflow-gpu = "2.3"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
